Resolved Issues: 3409 - minor	assigned	When we perform debugging, using add dependent        test case. In the Design window "Debug in progress" message is        not displaying. 3391 - minor	assigned	After clicking on the Report Tab Scenario list        and Status Grid both are overlapping. 3381 - feature	assigned	Add and Map - if the value is not entered in        any row and click on submit button, the blank field is not        highlighted. Web keywords for MobileWeb is integrated.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2284,6 +2284,13 @@ input[disabled]{
 .fromMergeObj{
 	cursor: pointer !important;
 }
+.addObjeError{
+	float: right;
+    position: relative;
+    top: 5px;
+    right: 300px;
+    color: red;
+}
 /******Map Object CSS******/
 
 
@@ -3425,6 +3432,9 @@ select:-webkit-autofill:focus {
     }
 }
 
+@media only screen and (height:1024px){
+	.suitestartend thead, .scenarioReports thead{position: relative;}
+}
 
 /* @media only screen and (min-width:1366px) {
     .login-bg-img {
